erd-ragel/y.output

state 0
	$accept: .main $end 

	TITLE  shift 3
	.  error

	main  goto 1
	title  goto 2

state 1
	$accept:  main.$end 

	$end  accept
	.  error


state 2
	main:  title.BREAK entities 

	BREAK  shift 4
	.  error


state 3
	title:  TITLE.':' STRING 

	':'  shift 5
	.  error


state 4
	main:  title BREAK.entities 

	LBRAC  shift 8
	.  error

	entity  goto 7
	entities  goto 6

state 5
	title:  TITLE ':'.STRING 

	STRING  shift 9
	.  error


state 6
	main:  title BREAK entities.    (1)

	.  reduce 1 (src line 34)


state 7
	entities:  entity.    (3)
	entities:  entity.BREAK entities 

	BREAK  shift 10
	.  reduce 3 (src line 46)


state 8
	entity:  LBRAC.STRING RBRAC NEWLINE attributes 

	STRING  shift 11
	.  error


state 9
	title:  TITLE ':' STRING.    (2)

	.  reduce 2 (src line 42)


state 10
	entities:  entity BREAK.entities 

	LBRAC  shift 8
	.  error

	entity  goto 7
	entities  goto 12

state 11
	entity:  LBRAC STRING.RBRAC NEWLINE attributes 

	RBRAC  shift 13
	.  error


state 12
	entities:  entity BREAK entities.    (4)

	.  reduce 4 (src line 47)


state 13
	entity:  LBRAC STRING RBRAC.NEWLINE attributes 

	NEWLINE  shift 14
	.  error


state 14
	entity:  LBRAC STRING RBRAC NEWLINE.attributes 

	STRING  shift 17
	.  error

	attributes  goto 15
	attribute  goto 16

state 15
	entity:  LBRAC STRING RBRAC NEWLINE attributes.    (5)

	.  reduce 5 (src line 50)


state 16
	attributes:  attribute.    (6)
	attributes:  attribute.NEWLINE attributes 

	NEWLINE  shift 18
	.  reduce 6 (src line 54)


state 17
	attribute:  STRING.    (8)

	.  reduce 8 (src line 58)


state 18
	attributes:  attribute NEWLINE.attributes 

	STRING  shift 17
	.  error

	attributes  goto 19
	attribute  goto 16

state 19
	attributes:  attribute NEWLINE attributes.    (7)

	.  reduce 7 (src line 55)


10 terminals, 7 nonterminals
9 grammar rules, 20/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
56 working sets used
memory: parser 9/240000
0 extra closures
13 shift entries, 1 exceptions
8 goto entries
2 entries saved by goto default
Optimizer space used: output 20/240000
20 table entries, 1 zero
maximum spread: 10, maximum offset: 18
